--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,12 +2,60 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-origin: #fec333 !important;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #fec333;
+}
+/*CONTAINER*/
 .container {
   width: 100%;
   height: 300px;
   display: flex;
-  background-origin: #fec333 !important;
+  flex-direction: column;
+}
+/*SMALLER OCNTAINER */
+.smaller-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+/*COMMUNITY */
+.community {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+.community img {
+  width: 30px;
+  height: 30px;
+}
+
+.links {
+  display: flex;
+  margin-top: 10px;
+  justify-content: space-between;
+}
+
+/*PAGES-LINKS*/
+
+.pages-links {
+  display: flex;
+  flex-direction: column;
+  padding-right: 10px;
+}
+
+.pages-links a {
+  text-decoration: none;
+  color: black;
+}
+/*LOGO */
+
+.logo {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 250px;
 }
