--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 .App {
