--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -43,6 +43,7 @@
 
 .pages-links {
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   padding-right: 10px;
 }
@@ -51,12 +52,19 @@
   text-decoration: none;
   color: black;
 }
+
+.pages-links :hover {
+  text-decoration: underline;
+}
 /*LOGO */
 
 .logo {
   display: flex;
-  pointer: none;
   align-items: flex-end;
   width: 100%;
   height: 250px;
+}
+
+.copyright {
+  cursor: none;
 }
