--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -12,7 +12,6 @@
 /*CONTAINER*/
 .container {
   width: 100%;
-  height: 300px;
   display: flex;
   flex-direction: column;
 }
@@ -62,10 +61,9 @@
   display: flex;
   align-items: flex-end;
   width: 100%;
-  height: 250px;
+  height: 100%;
 }
 
 .copyright {
-  margin-top: 20px;
   cursor: none;
 }
