--- a/src/components/popover/popover.css
+++ b/src/components/popover/popover.css
@@ -4,20 +4,7 @@
   box-sizing: border-box;
 }
 
-.container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.cartPopover {
-  display: flex;
-  flex-direction: row;
-  height: 500px;
-  width: 100%;
-}
-
-.articlePhoto {
-  width: 60%;
-  height: 100px;
+.prodPhoto {
+  width: 50px;
+  height: 50px;
 }
