--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -14,8 +14,9 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+ 
 }
-/*SMALLER OCNTAINER */
+/*SMALLER CONTAINER */
 .smaller-container {
   display: flex;
   justify-content: space-between;
