--- a/src/components/popover/popover.css
+++ b/src/components/popover/popover.css
@@ -28,13 +28,18 @@
   justify-content: space-between;
   align-items: center;
   margin: 10px;
+  padding-bottom: 5px;
+  border-bottom: 2px solid #fff;
 }
+
+
 
 .pd-info{
   display: flex;
   flex-direction: row;
   align-items: center;
 }
+
 
 .product-cart{
   margin-left: 5px;
