fronted updated, looking nice

--- a/src/components/carusel/carusel.css
+++ b/src/components/carusel/carusel.css
@@ -134,7 +134,7 @@ button.rec-dot:focus {
   width: 40px;
   font-size: 2.5rem;
 
-  color: green;
+  /* color: green; */
 }
 
 .css-i4bv87-MuiSvgIcon-root {
