--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -12,7 +12,7 @@
   font-weight: 600;
 }
 .css-hip9hq-MuiPaper-root-MuiAppBar-root {
-  background-color: #fdfbf4 !important;
+  background-color: #fdfbf4 ;
   color: #000000;
 }
 
